<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Gui.DetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView"
        android:layout_gravity="center"
        android:textSize="35dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:layout_gravity="left"/>
        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone:"
            android:layout_gravity="left"/>
        <RelativeLayout>
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="right"/>

            <ImageButton
                android:id="@+id/btn_sms"
                android:layout_toRightOf="@id/etPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:src="@drawable/ic_baseline_sms_24"
                android:onClick="onClickOpenSMS"
                />
            <ImageButton
                android:id="@+id/btn_Call"
                android:layout_toRightOf="@id/btn_sms"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_contact_phone_24"
                android:onClick="onClickOpenCall"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address:"
            android:layout_gravity="left"/>
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12345678"
            android:gravity="right"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:layout_gravity="left"/>
         <RelativeLayout>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12345678"
            android:gravity="right"
           />
        <ImageButton
            android:id="@+id/btnEmail"
            android:layout_toRightOf="@id/etEmail"
            android:src="@drawable/ic_baseline_email_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickOpenEmail"
            />
         </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="website:"
            android:layout_gravity="left"/>
        <RelativeLayout>
        <EditText
            android:id="@+id/etWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="right"/>
        <ImageButton
            android:id="@+id/btnWebsite"
            android:layout_toRightOf="@id/etWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_web_24"
            android:onClick="onClickOpenWebsite"
            />
        </RelativeLayout>

        <RelativeLayout>

        <CheckBox
            android:id="@+id/check_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="left"
            android:text="Favourite" />

        </RelativeLayout>

    </GridLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10px"
        android:text="@string/Back"
        android:layout_toRightOf="@id/btnSave"
        android:onClick="onClickBack"
        android:layout_gravity="right"
        />
     <Button
         android:id="@+id/btnSave"
         android:layout_marginLeft="80px"
         android:layout_marginRight="80px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:paddingBottom="10px"
         android:layout_gravity="right"
         android:layout_toRightOf="@+id/btnDelete"
         android:text="Save"
         />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
            android:paddingBottom="10px"
            android:text="@string/Delete"
            android:paddingRight="80px"
            android:layout_gravity="right"
            />




    </RelativeLayout>

</LinearLayout>

